# dtrack-hackathon

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  canister_ids.json  dfx.json  justfile  package-lock.json  package.json
just/: build.just  create-ident.sh  demo.just  dfx.just
src/dtrack_backend/: Cargo.toml  dtrack_backend.did
src/dtrack_backend/src/: apis.rs  init_and_upgrade.rs  lib.rs  models.rs  repository.rs  types.rs
src/dtrack_backend/src/apis/: labeled_address.rs  mod.rs
src/dtrack_backend/src/ext/: icp_index.rs  icp_ledger.rs  mod.rs
src/dtrack_backend/src/repository/: daily_summaries_store.rs  hour_summaries_store.rs  labeled_address_store.rs  mod.rs  monthly_summaries_store.rs  settings_store.rs
src/dtrack_frontend/: index.html  package.json  vite.config.js
src/dtrack_frontend/public/: .ic-assets.json5
src/dtrack_frontend/src/: App.jsx  App.tsx  main.tsx
src/dtrack_frontend/src/components/app/: Chart.tsx  FinancialOverview.tsx  LabeledAccounts.tsx  MonthlyChart.tsx  TrackingAddress.tsx  TransactionHistory.tsx  WebAnalytics.tsx
src/dtrack_frontend/src/components/auth/: LoginButton.tsx  LoginPage.tsx
src/dtrack_frontend/src/hooks/: types.ts  useAccounts.ts  useBalances.ts  useIndexTransactions.ts  useLabeledAccounts.ts  useTransactionHistory.ts  useTransactionLabels.ts
src/dtrack_frontend/src/lib/: const.ts  env.ts  utils.ts
src/dtrack_frontend/src/mocks/: tx.mock.ts
src/dtrack_frontend/src/services/: backend.service.ts  index.service.ts  ledger.service.ts
src/dtrack_frontend/src/stores/: account.store.ts  mock.ts
(+28 files in other folders)
