[package]
name = "dtrack_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
serde_bytes = "0.11.17"
serde_derive = "1.0.219"
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.7.0"
icrc-ledger-types = "0.1"